# axiom-sdk-rs

./: .gitignore  Cargo.toml  LICENSE  build_docker.sh  readme.md
.github/workflows/: test.yml
axiom-client/: Cargo.toml
axiom-client-sdk/src/: cmd.rs  compute.rs
circuit/: Cargo.toml
circuit/js/: pnpm-lock.yaml
circuit/src/: constants.rs  scaffold.rs  types.rs  utils.rs
circuit/src/input/: flatten.rs  raw_input.rs
circuit/src/run/: aggregation.rs  inner.rs
circuit/src/subquery/: caller.rs  ecdsa.rs  groth16.rs  mod.rs  types.rs  utils.rs
circuit/src/tests/: base.rs  keccak.rs  mod.rs  rlc.rs  shared_tests.rs  utils.rs
circuit/src/tests/data/: groth16_test_input.json  groth16_test_output.json
client/: pnpm-lock.yaml
sdk/: Cargo.toml  readme.md
sdk-derive/: Cargo.toml
sdk-derive/src/: input.rs  lib.rs
sdk/data/: account_age_input.json  keccak_config.json  keccak_input.json  quickstart_input.json  rlc_config.json
sdk/data/worldcoin/: vk.json  worldcoin_input.json
sdk/examples/: account_age.rs  groth16.rs  keccak.rs  quickstart.rs  rlc.rs  worldcoin.rs
sdk/src/: Dockerfile.cpu  api.rs  bin.rs  cli.rs  cmd.rs  compute.rs  lib.rs  server.rs
sdk/src/cli/: mod.rs  readme.md  types.rs
sdk/src/cmd/: mod.rs  types.rs
sdk/src/dockerize/: Dockerfile.template.cpu  mod.rs  readme.md
sdk/src/run/: mod.rs  readme.md  types.rs
sdk/src/server/: mod.rs  readme.md  types.rs
sdk/src/subquery/: account.rs  groth16.rs  header.rs  mapping.rs  mod.rs  receipt.rs  storage.rs  tx.rs
sdk/src/utils/: io.rs  mod.rs
