[package]
name = "axiom-circuit"
version = "0.1.0"
edition = "2021"
description = "Lower-level API for writing Axiom compute circuits"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axiom-codec = { git = "ssh://git@github.com/axiom-crypto/axiom-eth-working.git", rev="6e5bb46dc7608215fb9a618681c699f81dee005f" }
axiom-query = { git = "ssh://git@github.com/axiom-crypto/axiom-eth-working.git", rev="6e5bb46dc7608215fb9a618681c699f81dee005f" }
ethers = "2.0"
anyhow = "1.0.75"
tokio = "1.34.0"
dotenv = "0.15.0"
num-traits = "0.2"
num-derive = "0.3"
itertools = "0.12.0"
serde_json = "1.0.108"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.20"
num-bigint = "0.4.4"
num-integer = "0.1.45"

[dev-dependencies]
test-case = "3.3.1"
