[package]
name = "axiom-sdk-derive"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "Procedural macros for writing Axiom compute functions with axiom-sdk"
readme = "../readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version = "2.0.43", features=["full"]}
quote = "1.0.33"
proc-macro2 = "1.0.72"

[lib]
proc-macro = true
