[package]
name = "axiom-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axiom-circuit = { path = "../circuit" }
axiom-sdk-derive = { path = "../sdk-derive" }
ethers = "2.0"
anyhow = "1.0.75"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
clap = {version = "4.4.7", features = ["derive"]}
clap-num = "=1.0.2"
serde_json = "1.0.111"
log = "0.4"
env_logger = "0.9"