[package]
name = "axiom-sdk"
description = "User-friendly API for writing Axiom compute circuits"
readme = "../readme.md"

version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axiom-circuit = { path = "../circuit" }
axiom-sdk-derive = { path = "../sdk-derive" }
ethers = "2.0"
anyhow = "1.0.75"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
clap = {version = "4.4.7", features = ["derive"]}
clap-num = "=1.0.2"
serde_json = "1.0.111"
log = "0.4"
env_logger = "0.9"
bincode = "1.3.3"
rocket = { version = "0.5", features = ["json"] }
dirs = "5.0.1"
reqwest = {version = "0.12.3", features = ["blocking"]}
tokio = "1.37.0"
